# mini_state_graph

./: .gitignore  LICENSE  MINIGRAPH_VS_LANGGRAPH.md  README.md  pyproject.toml
examples/: retrieve_grade_answer_demo.py
src/mini_state_graph/: __init__.py  checkpoint.py  errors.py  executor.py  graph.py  reducers.py  state.py
tests/: test_mini_graph.py
